--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.9.6",
     "node-fetch": "^2.6.0",
     "node-gyp": "^6.0.1",
+    "jquery": "3.5.1",
     "quick.db": "^7.0.0-b22"
   },
   "scripts": {
