--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "imabritishcow",
-  "license": "CC BY 4.0"
+  "license": "MIT"
 }
