--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "node": "12.x"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/imabritishcow/onesearch-emc.git"
+  },
   "dependencies": {
     "discord.js": "^12.2.0",
     "moment-timezone": "^0.5.31",
