--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "discord.js": "^12.2.0",
+
+    "express": "^4.17.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.15",
     "node-fetch": "^2.6.0",
