--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "url": "https://github.com/imabritishcow/onesearch-emc.git"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.15",
     "node-fetch": "^2.6.0",
     "node-gyp": "^6.1.0",
-    "quick.db": "^7.1.1"
+    "quick.db": "^7.1.1",
+    "youtube-search": "^1.1.4",
+    "ytdl-core": "^2.1.7"
   },
   "scripts": {
     "start": "node index.js",
