--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/imabritishcow/onesearch-emc.git"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.1.1",
     "discord.js": "^12.2.0",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.15",
